Bug 406114 - Indicators Config Ui is not settings translation domain properly
Summary: Indicators Config Ui is not settings translation domain properly
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-04-01 14:19 UTC by Michail Vourlakos
Modified: 2019-04-09 23:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
fix_tanslates (442.77 KB, image/jpeg)
2019-04-01 15:15 UTC, Victor Ryzhykh
Details
latte (306.27 KB, image/jpeg)
2019-04-09 20:06 UTC, Victor Ryzhykh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michail Vourlakos 2019-04-01 14:19:41 UTC
Translators reported that indicators config ui is not translated correctly...

And a patch was provided that needed the translation domain to be set explicit for each different translation domain.

I have just made a commit merged in master and I am waiting for confirmation that this is fixed...
Comment 1 Victor Ryzhykh 2019-04-01 15:15:45 UTC
Created attachment 119198 [details]
fix_tanslates

Now it is fixed. I will attach the image with the Russian translation.
Comment 2 Michail Vourlakos 2019-04-01 15:23:50 UTC
(In reply to Victor Ryzhykh from comment #1)
> Created attachment 119198 [details]
> fix_tanslates
> 
> Now it is fixed. I will attach the image with the Russian translation.

please! that would make me really happy! :) because I was afraid that new indicators config ui's might did not succeed in this in any way! :)
Comment 3 Victor Ryzhykh 2019-04-01 15:29:11 UTC
There is a problem with the translation of the line in the file /latte-dock/containment/package/contents/ui/editmode/HeaderSettings.qml
There is a string «text: "Rearrange and configure your widgets"»
instead «text: i18n("Rearrange and configure your widgets")»
Comment 4 Michail Vourlakos 2019-04-01 15:36:22 UTC
(In reply to Victor Ryzhykh from comment #3)
> There is a problem with the translation of the line in the file
> /latte-dock/containment/package/contents/ui/editmode/HeaderSettings.qml
> There is a string «text: "Rearrange and configure your widgets"»
> instead «text: i18n("Rearrange and configure your widgets")»

fixed!
Side note, translations-related issues are too important!!!
Dont hesitate to open for each one a different bug/issue and also for translation improvements! If you think that a string is too complicated and you have an easier english way to describe it! Feel free to report it!

I am not a native english person so some strings might not be as simple to understand as I would like them to be.
Comment 5 Victor Ryzhykh 2019-04-09 20:06:53 UTC
Created attachment 119322 [details]
latte

Three days ago, the translation broke down in some localization files.
Do you know about this?
Comment 6 Michail Vourlakos 2019-04-09 20:17:45 UTC
(In reply to Victor Ryzhykh from comment #5)
> Created attachment 119322 [details]
> latte
> 
> Three days ago, the translation broke down in some localization files.
> Do you know about this?

no idea
Comment 7 Michail Vourlakos 2019-04-09 23:10:15 UTC
Git commit 86a7eddba50714d6fce1b334d91509f5028c5d86 by Michail Vourlakos.
Committed on 09/04/2019 at 23:09.
Pushed by mvourlakos into branch 'master'.

restore translations for settings window

M  +2    -0    app/infoview.cpp
M  +2    -0    app/view/settings/primaryconfigview.cpp
M  +2    -0    app/view/settings/secondaryconfigview.cpp

https://commits.kde.org/latte-dock/86a7eddba50714d6fce1b334d91509f5028c5d86
Comment 8 Michail Vourlakos 2019-04-09 23:11:05 UTC
(In reply to Victor Ryzhykh from comment #5)
> Created attachment 119322 [details]
> latte
> 
> Three days ago, the translation broke down in some localization files.
> Do you know about this?

Nice catch! Thank u!
It should be fixed now
Comment 9 Victor Ryzhykh 2019-04-09 23:34:30 UTC
Now everything works. Thank.
Very cool program.
Comment 10 Michail Vourlakos 2019-04-09 23:53:03 UTC
(In reply to Victor Ryzhykh from comment #9)
> Now everything works. Thank.
> Very cool program.

thank u!