restore translations for settings window

BUG: 406114