app/view/settings/primaryconfigview.cpp
@@ -152,6 +152,8 @@ void PrimaryConfigView::init()
     KDeclarative::KDeclarative kdeclarative;
     kdeclarative.setDeclarativeEngine(engine());
     kdeclarative.setTranslationDomain(QStringLiteral("latte-dock"));
+    kdeclarative.setupContext();
+    kdeclarative.setupEngine(engine());
     //kdeclarative.setupBindings();
 
     QByteArray tempFilePath = "lattedockconfigurationui";
