app/view/settings/secondaryconfigview.cpp
@@ -121,6 +121,8 @@ void SecondaryConfigView::init()
     KDeclarative::KDeclarative kdeclarative;
     kdeclarative.setDeclarativeEngine(engine());
     kdeclarative.setTranslationDomain(QStringLiteral("latte-dock"));
+    kdeclarative.setupContext();
+    kdeclarative.setupEngine(engine());
     //kdeclarative.setupBindings();
 
     QByteArray tempFilePath = "lattedocksecondaryconfigurationui";
